--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,24 +11,27 @@ env:
 jobs:
   test:
     runs-on: ubuntu_latest
-    name: make code in maching
-    uses: actions/checkout@v4
 
-    name: setting up nodejs
-    uses: actions/setup-node@v4
+    steps:
 
-    name: storing dependies in cache
-    uses: actions/cache@v4
-    with:
-      path: ~/.npm
-      key: chahe-with-dependies ${{Filename('**/package-lock.json')}}
+      name: make code in maching
+      uses: actions/checkout@v4
 
-    name: installing dependies
-    run: npm ci
+      name: setting up nodejs
+      uses: actions/setup-node@v4
 
-    name: starting server
-    run: npm start & npx wait-on http://127.0.0.1:PORT
+      name: storing dependies in cache
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: chahe-with-dependies ${{Filename('**/package-lock.json')}}
 
-    name: let me know my DB name
-    run: echo "Database name is $DB_NAME"
+      name: installing dependies
+      run: npm ci
+
+      name: starting server
+      run: npm start & npx wait-on http://127.0.0.1:PORT
+
+      name: let me know my DB name
+      run: echo "Database name is $DB_NAME"
   
