--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
       - name: setting up nodejs
         uses: actions/setup-node@v4
         with:
-          nodee-version:'20'
+          node-version:'20'
       - name: storing dependies in cache
         uses: actions/cache@v4
         with:
