--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "wait-on": "^9.0.3"
   }
 }
